# jupyter-notebooks

./: LICENSE  README.md  billionaires.ipynb  pyproject.toml
assets/data/: CBC_09112022043339710.csv  DP_LIVE_09112022045924048.csv
phila-crime-incidents/: violent_crime_incidents.ipynb
