[tool.poetry]
name = "jupyter-notebooks"
version = "0.1.0"
description = "Ad hoc data science analyses."
authors = ["Robert Barrimond <robert@barrimond.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "jupyter_notebooks"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
requests = "^2.28.1"
numpy = "^1.23.4"
scipy = "^1.9.3"
scikit-learn = "^1.1.3"
beautifulsoup4 = "^4.11.1"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
statsmodels = "^0.13.5"
ipython = "^8.6.0"
ipykernel = "^6.17.0"
lxml = "^4.9.1"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
